Add support for fat jars